--- a/smoke.html
+++ b/smoke.html
@@ -9,7 +9,7 @@ license that can be found in the LICENSE file.
     <title>polymer-ui-collapsible</title>
     <script src="../platform/platform.js"></script>
     <link rel="import" href="polymer-ui-collapsible.html">
-    <link rel="stylesheet" href="../polymer-ui-base-css/base.css">
+    <link rel="stylesheet" href="../polymer-ui-base/base.css">
     <style>
       polymer-ui-collapsible {
         margin-bottom: 2px;
