--- a/polymer-ui-collapsible.html
+++ b/polymer-ui-collapsible.html
@@ -28,7 +28,7 @@ license that can be found in the LICENSE file.
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="../polymer-collapse/polymer-collapse.html">
 
-<polymer-element name="polymer-ui-collapsible" attributes="active notap">
+<polymer-element name="polymer-ui-collapsible">
   <template>
     <link rel="stylesheet" href="polymer-ui-collapsible.css">
     <div on-tap="{{headerTap}}">
@@ -41,22 +41,24 @@ license that can be found in the LICENSE file.
   </template>
   <script>
     Polymer('polymer-ui-collapsible', {
-      /**
-       * If true, tapping on the header will not toggle the active state.
-       *
-       * @attribute notap
-       * @type boolean
-       * @default false
-       */
-      notap: false,
-      /**
-       * If true, the body is expanded.
-       *
-       * @attribute active
-       * @type boolean
-       * @default false
-       */
-      active: false,
+      publish: {
+        /**
+         * If true, tapping on the header will not toggle the active state.
+         *
+         * @attribute notap
+         * @type boolean
+         * @default false
+         */
+        notap: false,
+        /**
+         * If true, the body is expanded.
+         *
+         * @attribute active
+         * @type boolean
+         * @default false
+         */
+        active: {value: false, reflect: true}
+      },
       /** 
        * Toggle the active state of the collapsible.
        *
